--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1"
   },
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
